--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">7 Tips to Cultivate an Amazing Culture</a></h1>
-						<nav>
+						<h1><a href="index.html">7 Tips</a></h1>
+						<!--<nav>
 							<a href="#menu">Menu</a>
-						</nav>
+						</nav>-->
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
+					<!--<nav id="menu">
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
@@ -40,14 +40,14 @@
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
-					</nav>
+					</nav>-->
 
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-diamond"></span></div>
+							<div class="logo icon"><img src="images/grokker.svg" alt="" /></div>
 							<h2>7 Tips to Cultivate an Amazing Culture</h2>
-							<p>Learn from Silycon Valley's Best <a href="https://grokker.com">Brougth to you by Grokker</a></p>
+							<p>Learn from Silycon Valley's Best <a href="https://grokker.com">by Grokker</a></p>
 						</div>
 					</section>
 
@@ -68,7 +68,7 @@
 									<div class="content">
 										<h2 class="major">1. Live Joyfully</h2>
 										<p>Create joyful moments and breaks for employees. It’s easy to get caught up in the work that needs to get done and falsely label these breaks as frivolous. But there are small, easy ways to infuse joy for little to no cost, and the cultural rewards are enormous. Take your fun seriously!</p>
-										<a href="#" class="special">Learn more</a>
+										<!--<a href="#" class="special">Learn more</a>-->
 									</div>
 								</div>
 							</section>
@@ -80,7 +80,7 @@
 									<div class="content">
 										<h2 class="major">2. Inspire Others to Action</h2>
 										<p> Have a passion and vision and share it. Paint a picture of where you’re headed, how you’ll change the world, and the impact your team can have in manifesting this new reality. If they can see how they can become a part of it, then they will follow you into battle.</p>
-										<a href="#" class="special">Learn more</a>
+										<!--<a href="#" class="special">Learn more</a>-->
 									</div>
 								</div>
 							</section>
@@ -92,17 +92,66 @@
 									<div class="content">
 										<h2 class="major">3. Take Care of Yourself</h2>
 										<p>Get enough sleep, exercise, good food, and fun. Mental, physical, and emotional well-being should be a daily priority.</p>
-										<a href="#" class="special">Learn more</a>
+										<!--<a href="#" class="special">Learn more</a>-->
 									</div>
 								</div>
 							</section>
+
+							<!-- Four -->
+								<section id="one" class="wrapper alt spotlight style1">
+									<div class="inner">
+										<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+										<div class="content">
+											<h2 class="major">4. Practice Resilience</h2>
+											<p>Being able to bounce back and be tenacious is a key skill for having a rich life.</p>
+											<!--<a href="#" class="special">Learn more</a>-->
+										</div>
+									</div>
+								</section>
+
+								<!-- Five -->
+									<section id="two" class="wrapper spotlight style2">
+										<div class="inner">
+											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<div class="content">
+												<h2 class="major">5. Seek and Support</h2>
+												<p> It is a sign of courage, not weakness, to ask for help, and your willingness to show vulnerability can bring colleagues closer and create a community bond.</p>
+												<!--<a href="#" class="special">Learn more</a>-->
+											</div>
+										</div>
+									</section>
+
+									<!-- Six -->
+										<section id="three" class="wrapper alt spotlight style3">
+											<div class="inner">
+												<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+												<div class="content">
+													<h2 class="major">6. Swap Life Stories</h2>
+													<p>Share where you came from, and listen to others’ stories to create a trust-based and authentic relationship. It’s personal, so why pretend otherwise? </p>
+													<!--<a href="#" class="special">Learn more</a>-->
+												</div>
+											</div>
+										</section>
+
+										<!-- Seven -->
+											<section id="one" class="wrapper spotlight style1">
+												<div class="inner">
+													<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+													<div class="content">
+														<h2 class="major">7. Be Yourself</h2>
+														<p>Know where you came from, where you want to be, and always be true to your authentic self.</p>
+														<!-- <a href="#" class="special">Learn more</a>-->
+													</div>
+												</div>
+											</section>
 
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">About the Speaker</h2>
 									<p>Lorna is a speaker, contributing author, and C-suite peer adviser on how to create an engaged company culture that sustains and develops high-quality talent. As founder and CEO of Grokker, Lorna is changing how busy people get and stay healthy by delivering premium, on-demand video wellness content and a supportive online community of experts and enthusiasts, available at any time. After 15 years in high-profile roles at eBay, Inc. (EBAY), Yahoo! (YHOO), and Move, Inc., Lorna has developed a blueprint for creating employee-centric cultures. At Grokker, Lorna works with her network of fellow Silicon Valley leaders to redefine the startup culture to encourage healthy lifestyle actions and well-being.</p>
-									<section class="features">
+									<a class="image"><img src="images/pic-lorna.jpg" alt="" /></a>
+									<!--<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3 class="major">Sed feugiat lorem</h3>
@@ -132,16 +181,31 @@
 										<li><a href="#" class="button">Browse All</a></li>
 									</ul>
 								</div>
-							</section>
+							</section> -->
 
+					</section>
+
+					<section id="four" class="wrapper style2">
+						<div class="inner">
+							<h2 class="major">About Grokker</h2>
+							<p>Founded by mother, yogi, and internet veteran Lorna Borenstein, Grokker is a personalized wellness service for busy people on-the-go. Whether employees have 5 minutes or 50, Grokker offers engaging video content from top experts including yoga, fitness, healthy eating, and meditation and a vibrant online community of experts and enthusiasts. Grokker is available on your PC, mobile device, Apple Watch, and TV through Comcast, Amazon Prime, Apple TV, Roku, and Chromecast. Learn more at  <a href="www.grokker.com/wellness">grokker.com/wellness</a></p>
+					</section>
+
+					<section id="four" class="wrapper alt style1">
+						<div class="inner">
+							<h2 class="major">Get the full story</h2>
+							<div class="actions">
+								<a href="/images/grokker7tips.pdf" download><input type="submit" value="Download the Whitepaper" /></a>
+							</div>
 					</section>
 
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-							<form method="post" action="#">
+							<h2 class="major">Get in touch </h2>
+							<p>You can contact me on email or follow what Grokker is up to in social media.</p>
+
+							<!--<form method="post" action="#">
 								<div class="field">
 									<label for="name">Name</label>
 									<input type="text" name="name" id="name" />
@@ -157,21 +221,17 @@
 								<ul class="actions">
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
-							</form>
+							</form> -->
 							<ul class="contact">
-								<li class="fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
-								</li>
-								<li class="fa-phone">(000) 000-0000</li>
-								<li class="fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="fa-facebook"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								<li class="fa-home"><a href="https://grokker.com">Grokker</a></li>
+								<li class="fa-envelope"><a href="mailto:lb@grokker.com?Subject=Hello%20again">Email</a></li>
+								<li class="fa-facebook"><a href="https://facebook.com/Grokkerinc">Facebook</a></li>
+								<li class="fa-instagram"><a href="https://instagram.com/grokkerinc/">Instagram</a></li>
+								<li class="fa-twitter"><a href="https://twitter.com/grokkerinc">Twitter</a></li>
+
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Grokker</li><li>Design: <a href="https://grokker.com">Visit Site</a></li>
+								<li>&copy; Grokker</li>
 							</ul>
 						</div>
 					</section>
