--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 									<div class="content">
 										<h2 class="major">1. Live Joyfully</h2>
 										<p>Create joyful moments and breaks for employees. It’s easy to get caught up in the work that needs to get done and falsely label these breaks as frivolous. But there are small, easy ways to infuse joy for little to no cost, and the cultural rewards are enormous. Take your fun seriously!</p>
+										<p><b>Real World Example:</b> Pinterest hosts Studio Nights with local businesses for small groups of 15-20 employees to learn about something new together - like how to make artisan chocolate! </p>
 										<!--<a href="#" class="special">Learn more</a>-->
 									</div>
 								</div>
@@ -80,6 +81,7 @@
 									<div class="content">
 										<h2 class="major">2. Inspire Others to Action</h2>
 										<p> Have a passion and vision and share it. Paint a picture of where you’re headed, how you’ll change the world, and the impact your team can have in manifesting this new reality. If they can see how they can become a part of it, then they will follow you into battle.</p>
+										<p><b>Real World Example:</b> When my friend, Natalie Fair, a top executive at Pinterest, decided to shift her career focus from CFO to coaching employees, her CEO and colleagues all encouraged her to present her dream in an all-staff meeting, rather than sending an email. She received an incredibly supportive, engaged response from employees because of her human delivery in a typically digital environment.</p>
 										<!--<a href="#" class="special">Learn more</a>-->
 									</div>
 								</div>
@@ -92,6 +94,8 @@
 									<div class="content">
 										<h2 class="major">3. Take Care of Yourself</h2>
 										<p>Get enough sleep, exercise, good food, and fun. Mental, physical, and emotional well-being should be a daily priority.</p>
+										<p><b>Real World Example:</b> As a busy founder, CEO, and mom, I stay centered with a mantra I call 8-3-3: 8 hours of sleep a night, 3 nutritious meals a day, and 3 sweaty workouts/challenging yoga practices/meditation sessions per week. For me, this is non-negotiable. I suggest that everyone find their own “non-negotiable” that you must do to maintain your own well-being. </p>
+
 										<!--<a href="#" class="special">Learn more</a>-->
 									</div>
 								</div>
@@ -104,6 +108,7 @@
 										<div class="content">
 											<h2 class="major">4. Practice Resilience</h2>
 											<p>Being able to bounce back and be tenacious is a key skill for having a rich life.</p>
+											<p><b>Real World Example:</b> My friend, Hilary Schneider, CEO of LifeLock, went through her own humbling experience while trying to sell the company. As they faced repeated rejection on their path to the sale, the team made the decision to be each other’s best advocates. This meant that they would be honest and open with their feedback and recognize that no one gets everything right the first time. They embraced the motto that “feedback is a gift” and made it core to their culture.</p>
 											<!--<a href="#" class="special">Learn more</a>-->
 										</div>
 									</div>
@@ -116,6 +121,7 @@
 											<div class="content">
 												<h2 class="major">5. Seek and Support</h2>
 												<p> It is a sign of courage, not weakness, to ask for help, and your willingness to show vulnerability can bring colleagues closer and create a community bond.</p>
+												<p><b>Real World Example:</b> To encourage employees to feel more comfortable giving and receiving feedback, LifeLock managers changed their 1:1 meetings to be out in the open instead of behind closed conference room doors. This created a culture of transparency that led to increased trust and support. </p>
 												<!--<a href="#" class="special">Learn more</a>-->
 											</div>
 										</div>
@@ -128,6 +134,8 @@
 												<div class="content">
 													<h2 class="major">6. Swap Life Stories</h2>
 													<p>Share where you came from, and listen to others’ stories to create a trust-based and authentic relationship. It’s personal, so why pretend otherwise? </p>
+													<p><b>Real World Example:</b> Pinterest created an employee group for moms that begins each meeting with a “mom share”, allowing members to give voice to their personal experiences in a supportive environment.</p>
+
 													<!--<a href="#" class="special">Learn more</a>-->
 												</div>
 											</div>
@@ -140,6 +148,7 @@
 													<div class="content">
 														<h2 class="major">7. Be Yourself</h2>
 														<p>Know where you came from, where you want to be, and always be true to your authentic self.</p>
+														<p><b>Real World Example:</b> To bring Grokker IRL for our customer Synaptics, we hosted a “fun run”  on campus. Employees looking out their windows at the event saw their colleagues of all levels joining in and spontaneously ran down to participate. The event grew organically as employees dropped their corporate personas and let themselves relax.</p>
 														<!-- <a href="#" class="special">Learn more</a>-->
 													</div>
 												</div>
