--- a/index.html
+++ b/index.html
@@ -22,44 +22,31 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1><a href="index.html">7 Tips</a></h1>
-						<!--<nav>
-							<a href="#menu">Menu</a>
-						</nav>-->
 					</header>
 
-				<!-- Menu -->
-					<!--<nav id="menu">
-						<div class="inner">
-							<h2>Menu</h2>
-							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
-							</ul>
-							<a href="#" class="close">Close</a>
-						</div>
-					</nav>-->
 
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
 							<div class="logo icon"><img src="images/grokker.svg" alt="" /></div>
 							<h2>7 Tips to Cultivate an Amazing Culture</h2>
-							<p>by <a href="https://grokker.com">Grokker</a> CEO Lorna Borenstein</p>
+							<p class="light">by <a href="https://grokker.com">Grokker</a> CEO Lorna Borenstein</p>
+								<a class="actions special" href="https://grokker.com"><input type="submit" value="Download the Whitepaper" /></a>
 						</div>
 					</section>
 
 				<!-- Wrapper -->
-					<section id="wrapper">
+				<section id="wrapper">
 
-						<section id="four" class="wrapper alt style1">
-							<div class="inner">
-								<p class="major">Posting your company values up on the walls isn’t what makes a culture; genuinely caring about your employees and their well-being is what does. Here are my tips to creating an employee-centric culture, from my years of working with some of Silicon Valley’s most recognizable leaders:</p>
-								<a class="image"><img src="images/pic-lorna.jpg" alt="" /></a>
-							</div>
-							</section>
+							<section id="four" class="wrapper alt spotlight style2">
+									<div class="inner">
+										<a href="#" class="image"><img src="images/pic-lorna.jpg" alt="" /></a>
+										<div class="content">
+											<h1 class="major">Posting your company values up on the walls isn’t what makes a culture; genuinely caring about your employees and their well-being is what does. Here are my tips to creating an employee-centric culture, from my years of working with some of Silicon Valley’s most recognizable leaders:</h1>
+										</div>
+									</div>
+								</section>
+
 
 
 						<!-- One -->
@@ -67,9 +54,9 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">1. Live Joyfully</h2>
+										<h1 class="major">1. Live Joyfully</h1>
 										<p>Create joyful moments and breaks for employees. It’s easy to get caught up in the work that needs to get done and falsely label these breaks as frivolous. But there are small, easy ways to infuse joy for little to no cost, and the cultural rewards are enormous. Take your fun seriously!</p>
-										<p><b>Real World Example:</b> <b>Pinterest</b> hosts Studio Nights with local businesses for small groups of 15-20 employees to learn about something new together - like how to make artisan chocolate! </p>
+										<p><b>Real World Example:</b> <a href="https://grokker.com">Pinterest</a> hosts Studio Nights with local businesses for small groups of 15-20 employees to learn about something new together - like how to make artisan chocolate! </p>
 										<!--<a href="#" class="special">Learn more</a>-->
 									</div>
 								</div>
@@ -80,64 +67,57 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">2. Inspire Others to Action</h2>
+										<h1 class="major">2. Inspire Others to Action</h1>
 										<p> Have a passion and vision and share it. Paint a picture of where you’re headed, how you’ll change the world, and the impact your team can have in manifesting this new reality. If they can see how they can become a part of it, then they will follow you into battle.</p>
-										<p><b>Real World Example:</b> When my friend, Natalie Fair, a top executive at <b>Pinterest,</b> decided to shift her career focus from CFO to coaching employees, her CEO and colleagues all encouraged her to present her dream in an all-staff meeting, rather than sending an email. She received an incredibly supportive, engaged response from employees because of her human delivery in a typically digital environment.</p>
-										<!--<a href="#" class="special">Learn more</a>-->
+										<p><b>Real World Example:</b> When my friend, Natalie Fair, a top executive at <a href="https://grokker.com">Pinterest,</a> decided to shift her career focus from CFO to coaching employees, her CEO and colleagues all encouraged her to present her dream in an all-staff meeting, rather than sending an email. She received an incredibly supportive, engaged response from employees because of her human delivery in a typically digital environment.</p>
 									</div>
 								</div>
 							</section>
 
 						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
+							<section id="three" class="wrapper spotlight style1">
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">3. Take Care of Yourself</h2>
+										<h1 class="major">3. Take Care of Yourself</h1>
 										<p>Get enough sleep, exercise, good food, and fun. Mental, physical, and emotional well-being should be a daily priority.</p>
 										<p><b>Real World Example:</b> As a busy founder, CEO, and mom, I stay centered with a mantra I call 8-3-3: 8 hours of sleep a night, 3 nutritious meals a day, and 3 sweaty workouts/challenging yoga practices/meditation sessions per week. For me, this is non-negotiable. I suggest that everyone find their own “non-negotiable” that you must do to maintain your own well-being. </p>
-
-										<!--<a href="#" class="special">Learn more</a>-->
 									</div>
 								</div>
 							</section>
 
 							<!-- Four -->
-								<section id="one" class="wrapper alt spotlight style1">
+								<section id="one" class="wrapper alt spotlight style2">
 									<div class="inner">
 										<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 										<div class="content">
-											<h2 class="major">4. Practice Resilience</h2>
+											<h1 class="major">4. Practice Resilience</h1>
 											<p>Being able to bounce back and be tenacious is a key skill for having a rich life.</p>
-											<p><b>Real World Example:</b> My friend, Hilary Schneider, CEO of <b>LifeLock,</b> went through her own humbling experience while trying to sell the company. As they faced repeated rejection on their path to the sale, the team made the decision to be each other’s best advocates. This meant that they would be honest and open with their feedback and recognize that no one gets everything right the first time. They embraced the motto that “feedback is a gift” and made it core to their culture.</p>
-											<!--<a href="#" class="special">Learn more</a>-->
+											<p><b>Real World Example:</b> My friend, Hilary Schneider, CEO of <a href="https://grokker.com">LifeLock,</a> went through her own humbling experience while trying to sell the company. As they faced repeated rejection on their path to the sale, the team made the decision to be each other’s best advocates. This meant that they would be honest and open with their feedback and recognize that no one gets everything right the first time. They embraced the motto that “feedback is a gift” and made it core to their culture.</p>
 										</div>
 									</div>
 								</section>
 
 								<!-- Five -->
-									<section id="two" class="wrapper spotlight style2">
+									<section id="two" class="wrapper spotlight style1">
 										<div class="inner">
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<div class="content">
-												<h2 class="major">5. Seek and Support</h2>
+												<h1 class="major">5. Seek and Support</h1>
 												<p> It is a sign of courage, not weakness, to ask for help, and your willingness to show vulnerability can bring colleagues closer and create a community bond.</p>
 												<p><b>Real World Example:</b> To encourage employees to feel more comfortable giving and receiving feedback, <b>LifeLock</b> managers changed their 1:1 meetings to be out in the open instead of behind closed conference room doors. This created a culture of transparency that led to increased trust and support. </p>
-												<!--<a href="#" class="special">Learn more</a>-->
 											</div>
 										</div>
 									</section>
 
 									<!-- Six -->
-										<section id="three" class="wrapper alt spotlight style3">
+										<section id="three" class="wrapper alt spotlight style2">
 											<div class="inner">
 												<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
 												<div class="content">
-													<h2 class="major">6. Swap Life Stories</h2>
+													<h1 class="major">6. Swap Life Stories</h1>
 													<p>Share where you came from, and listen to others’ stories to create a trust-based and authentic relationship. It’s personal, so why pretend otherwise? </p>
-													<p><b>Real World Example:</b> <b>Pinterest</b> created an employee group for moms that begins each meeting with a “mom share”, allowing members to give voice to their personal experiences in a supportive environment.</p>
-
-													<!--<a href="#" class="special">Learn more</a>-->
+													<p><b>Real World Example:</b> <a href="https://grokker.com">Pinterest</a> created an employee group for moms that begins each meeting with a “mom share”, allowing members to give voice to their personal experiences in a supportive environment.</p>
 												</div>
 											</div>
 										</section>
@@ -147,94 +127,43 @@
 												<div class="inner">
 													<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
 													<div class="content">
-														<h2 class="major">7. Be Yourself</h2>
+														<h1 class="major">7. Be Yourself</h1>
 														<p>Know where you came from, where you want to be, and always be true to your authentic self. Create a culture where you can bring your whole self to work each day.</p>
-														<p><b>Real World Example:</b> To bring <b>Grokker</b> IRL for our customer <b>Synaptics,</b> we hosted a “fun run”  on campus. Employees looking out their windows at the event saw their colleagues of all levels joining in and spontaneously ran down to participate. The event grew organically as employees dropped their corporate personas and let themselves relax.</p>
-														<!-- <a href="#" class="special">Learn more</a>-->
+														<p><b>Real World Example:</b> To bring <a href="https://grokker.com">Grokker</a> IRL for our customer <b>Synaptics,</b> we hosted a “fun run”  on campus. Employees looking out their windows at the event saw their colleagues of all levels joining in and spontaneously ran down to participate. The event grew organically as employees dropped their corporate personas and let themselves relax.</p>
 													</div>
 												</div>
 											</section>
 
-						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
+
+						<!-- About -->
+							<section id="about1" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">About the Author</h2>
-									<p>Lorna is a speaker, contributing author, and C-suite peer adviser on how to create an engaged company culture that sustains and develops high-quality talent. As founder and CEO of Grokker, Lorna is changing how busy people get and stay healthy by delivering premium, on-demand video wellness content and a supportive online community of experts and enthusiasts, available at any time. After 15 years in high-profile roles at eBay, Inc. (EBAY), Yahoo! (YHOO), and Move, Inc., Lorna has developed a blueprint for creating employee-centric cultures. At Grokker, Lorna works with her network of fellow Silicon Valley leaders to redefine the startup culture to encourage healthy lifestyle actions and well-being.</p>
-									<a class="image"><img src="images/pic-lorna.jpg" alt="" /></a>
-									<!--<section class="features">
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-									</section>
-									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
-									</ul>
+									<h1 class="major">About the Author</h1>
+									<p>Lorna is a speaker, contributing author, and C-suite peer adviser on how to create an engaged company culture that sustains and develops high-quality talent. As founder and CEO of <a href="https://grokker.com">Grokker,</a> Lorna is changing how busy people get and stay healthy by delivering premium, on-demand video wellness content and a supportive online community of experts and enthusiasts, available at any time. After 15 years in high-profile roles at eBay, Inc. (EBAY), Yahoo! (YHOO), and Move, Inc., Lorna has developed a blueprint for creating employee-centric cultures. At Grokker, Lorna works with her network of fellow Silicon Valley leaders to redefine the startup culture to encourage healthy lifestyle actions and well-being.</p>
 								</div>
-							</section> -->
+								<div class="inner">
+									<h1 class="major">About Grokker</h1>
+									<p>Founded by mother, yogi, and internet veteran Lorna Borenstein, <a href="https://grokker.com">Grokker</a> is a personalized wellness service for busy people on-the-go. Whether employees have 5 minutes or 50, Grokker offers engaging video content from top experts including yoga, fitness, healthy eating, and meditation and a vibrant online community of experts and enthusiasts. <a href="https://grokker.com">Grokker</a> is available on your PC, mobile device, Apple Watch, and TV through Comcast, Amazon Prime, Apple TV, Roku, and Chromecast. Learn more at  <a href="www.grokker.com/wellness">grokker.com/wellness</a></p>
+								</div>
+								<div class="inner">
+									<h1 class="major">Get the full story</h1>
+									<a href="https://grokker.com" class="special">Download the Whitepaper</a>
+									</div>
+							</section>
 
-					</section>
+				</section>
 
-					<section id="four" class="wrapper style2">
-						<div class="inner">
-							<h2 class="major">About Grokker</h2>
-							<p>Founded by mother, yogi, and internet veteran Lorna Borenstein, Grokker is a personalized wellness service for busy people on-the-go. Whether employees have 5 minutes or 50, Grokker offers engaging video content from top experts including yoga, fitness, healthy eating, and meditation and a vibrant online community of experts and enthusiasts. Grokker is available on your PC, mobile device, Apple Watch, and TV through Comcast, Amazon Prime, Apple TV, Roku, and Chromecast. Learn more at  <a href="www.grokker.com/wellness">grokker.com/wellness</a></p>
-					</section>
 
-					<section id="four" class="wrapper alt style1">
-						<div class="inner">
-							<h2 class="major">Get the full story</h2>
-							<div class="actions">
-								<a href="/images/grokker7tips.pdf" download><input type="submit" value="Download the Whitepaper" /></a>
-							</div>
-					</section>
+
 
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch </h2>
-							<p>You can contact me on email or follow what Grokker is up to in social media.</p>
+							<p class="light">Email me at <a href="mailto:lb@grokker.com?Subject=Hello%20again">lb@grokker.com</a> or follow us on social media.</p>
 
-							<!--<form method="post" action="#">
-								<div class="field">
-									<label for="name">Name</label>
-									<input type="text" name="name" id="name" />
-								</div>
-								<div class="field">
-									<label for="email">Email</label>
-									<input type="email" name="email" id="email" />
-								</div>
-								<div class="field">
-									<label for="message">Message</label>
-									<textarea name="message" id="message" rows="4"></textarea>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form> -->
+
 							<ul class="contact">
-								<li class="fa-home"><a href="https://grokker.com">Grokker</a></li>
-								<li class="fa-envelope"><a href="mailto:lb@grokker.com?Subject=Hello%20again">Email</a></li>
 								<li class="fa-facebook"><a href="https://facebook.com/Grokkerinc">Facebook</a></li>
 								<li class="fa-instagram"><a href="https://instagram.com/grokkerinc/">Instagram</a></li>
 								<li class="fa-twitter"><a href="https://twitter.com/grokkerinc">Twitter</a></li>
